--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -71,6 +71,50 @@
                     </tbody>
                 </table>
             </div>
+            <div class="col-6">
+                <p><strong>Add Details</strong></p>
+            </div>
+            <div class="col-6">
+                <form>
+                    <div class="form-row">
+                      <div class="form-group col-md-6">
+                        <label for="inputEmail4">Email</label>
+                        <input type="email" class="form-control" id="inputEmail4" placeholder="Email">
+                      </div>
+                      <div class="form-group col-md-6">
+                        <label for="inputPassword">Password</label>
+                        <input type="password" class="form-control" id="inputPassword" placeholder="Password">
+                      </div>
+                    </div>
+                    <div class="form-group">
+                      <label for="inputAddress">Name</label>
+                      <input type="text" class="form-control" id="name" placeholder="John Snow">
+                    </div>
+                    <div class="form-row">
+                        <div class="form-group col-md-4">
+                          <label for="inputState">Martial Status</label>
+                          <select id="inputState" class="form-control">
+                            <option selected>Choose...</option>
+                            <option>Married</option>
+                            <option>Single</option>
+                          </select>
+                        </div>
+                        <div class="form-group col-md-4">
+                            <label for="inputState">Gender</label>
+                            <select id="inputState" class="form-control">
+                              <option selected>Choose...</option>
+                              <option>Male</option>
+                              <option>Female</option>
+                            </select>
+                          </div>
+                        <div class="form-group col-md-4">
+                          <label for="phoneNo">Phone No</label>
+                          <input type="number" class="form-control" id="phoneNo">
+                        </div>
+                      </div>
+                    <button type="submit" class="btn btn-primary">Sign in</button>
+                  </form>
+            </div>
         </div>
     </body>
     <script>
